@@ -213,7 +213,23 @@
 <article class="doc">
 <h1 class="page">Changelog</h1>
 <div class="sect1">
-<h2 id="_0_8_0_dev_unreleased"><a class="anchor" href="#_0_8_0_dev_unreleased"></a>0.8.0-dev - unreleased</h2>
+<h2 id="_0_8_1_unreleased"><a class="anchor" href="#_0_8_1_unreleased"></a>0.8.1 - unreleased</h2>
+<div class="sectionbody">
+<div class="ulist">
+<ul>
+<li>
+<p>Kartenterminal: Firmwareversion ins Formular mit aufgenommen für manuellen
+Eintrag bei mobilen Kartenterminals</p>
+</li>
+<li>
+<p>Tags für die objekt-übergreifende Kennzeichnung</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+<div class="sect1">
+<h2 id="_0_8_0_2025_05_13"><a class="anchor" href="#_0_8_0_2025_05_13"></a>0.8.0 - 2025-05-13</h2>
 <div class="sectionbody">
 <div class="ulist">
 <ul>
